# lz4-rs

./: Cargo.toml
lz4-sys/: Cargo.toml  README.md  build.rs
lz4-sys/src/: lib.rs
src/: error.rs  frame.rs  lib.rs
