[package]
name = "lz4"
version = "1.23.1"
license = "MIT"
readme = "README.md"
authors = [ "Jens Heyens <jens.heyens@ewetel.net>", "Artem V. Navrotskiy <bozaro@buzzsoft.ru>" ]
description = "Rust LZ4 bindings library."
repository = "https://github.com/bozaro/lz4-rs"
documentation = "https://bozaro.github.io/lz4-rs/lz4/"
edition = "2018"

[workspace]
members = [
  "lz4-sys",
]

[dependencies]
libc = "0.2.44"
lz4-sys = { version = "2.0.0", path = "lz4-sys" }

[dev-dependencies]
rand = "0.6.1"
docmatic = "0.1"
