[package]
name = "lz4-sys"
version = "2.0.0"
authors = [
  "Jens Heyens <jens.heyens@ewetel.net",
  "Artem V. Navrotskiy <bozaro@buzzsoft.ru>"
]
edition = "2018"
description = "Rust LZ4 sys package."
documentation = "https://docs.rs/lz4-sys/"
readme = "README.md"
homepage = "https://github.com/bozaro/lz4-rs"
repository = "https://github.com/bozaro/lz4-rs"
license = "MIT"
keywords = ["ffi", "lz4"]
links = "lz4"

[dependencies]
libc = "0.2.44"

[build-dependencies]
cc = "1.0.25"
